--- a/form3/index.html
+++ b/form3/index.html
@@ -77,7 +77,7 @@
 
                 <label for="profissão">Profissão:</label><br>
                 <select name="profissão" id="profissão">
-                    <option value="" selected="selected">Sua Profissão &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>
+                    <option value="" selected="selected">-- Sua Profissão --</option>
                     <option value="ator">Ator</option>
                     <option value="barbeiro">Barbeiro</option>
                     <option value="cozinheiro">Cozinheiro</option>
