--- a/Atividade 19/formCadastro.html
+++ b/Atividade 19/formCadastro.html
@@ -34,7 +34,7 @@
 
     <div class="menu2">
         <div>
-            <img src="imagem/logo(3).PNG" alt="logo" srcset="">
+            <a href="index.html" target="_self"><img src="imagem/logo(3).PNG" alt="logo" srcset=""></a>
         </div>
 
         <div>
