--- a/Atividade 19/formCadastro.html
+++ b/Atividade 19/formCadastro.html
@@ -66,11 +66,11 @@
     <br>
 
     <div class="cadastro">
-        <form action="">
+        <form>
             <table>
                 <tr>
                     <th colspan="3" id="top">Não é Cadastrado? Faça seu cadastro</th>
-                    <td id="lado">É Cadastrado?<a href="" target="_self"><strong> Cique Aqui!</strong></a></td>
+                    <td id="lado">É Cadastrado?<a href="formLogin.html" target="_self"><strong> Cique Aqui!</strong></a></td>
                 </tr>
     
                 <tr>
@@ -154,6 +154,55 @@
                 </tr>
             </table>
         </form> 
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <hr>
+
+    <div class="rodape">
+        <table cellpadding="10" border="0">
+            <div>
+                <tr>
+                    <th rowspan="4"><a href="index.html" target="_self" title="Séries e Filmes"><img src="imagem/logo(1).PNG" width="200" alt="Séries e Filmes"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Inicio &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Sobre-nós &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Suporte</th>
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Home</td>
+                    <td>Informações da empresa</td>
+                    <td>FAQ</td>
+                    <!-- <td></td> -->
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Produtos</td>
+                    <td><a href="formCadastro.html" target="_self">Contato</a></td>
+                    <td>Telefones</td>
+                    <!-- <td></td> -->
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Pedidos</td>
+                    <td>Blog</td>
+                    <td>Chat</td>
+                    <td></td>
+                </tr>
+            </div>
+        </table>
     </div>
 </body>
 </html>
