--- a/Atividade 19/series.html
+++ b/Atividade 19/series.html
@@ -114,5 +114,50 @@
             </tr>
         </table>
     </div>
+
+    <hr>
+
+    <div class="rodape">
+        <table cellpadding="10" border="0">
+            <div>
+                <tr>
+                    <th rowspan="4"><a href="index.html" target="_self" title="Séries e Filmes"><img src="imagem/logo(1).PNG" width="200" alt="Séries e Filmes"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Inicio &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Sobre-nós &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th>Suporte</th>
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Home</td>
+                    <td>Informações da empresa</td>
+                    <td>FAQ</td>
+                    <!-- <td></td> -->
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Produtos</td>
+                    <td><a href="formCadastro.html" target="_self">Contato</a></td>
+                    <td>Telefones</td>
+                    <!-- <td></td> -->
+                </tr>
+            </div>
+
+            <div>
+                <tr>
+                    <!-- <td></td> -->
+                    <td>Pedidos</td>
+                    <td>Blog</td>
+                    <td>Chat</td>
+                    <td></td>
+                </tr>
+            </div>
+        </table>
+    </div>
 </body>
 </html>
